fix: fixed ariscorp-homepage alignment fix: fixed layout

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,9 @@
   .hr-short{
     @apply w-16 mt-2
   }
+  img {
+    display: unset;
+  }
 }
 
 hr {
